k8s/flux/clusters/tal-clu-1/infra/network/adguard-home/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: http
  namespace: adguard-home
spec:
  entryPoints: ["web"]
  routes:
  - match: Host(`adguard.homelab.emerconnelly.com`)
    kind: Rule
    middlewares:
    - name: https-redirect
      namespace: traefik
    services:
    - name: noop@internal
      kind: TraefikService
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: https
  namespace: adguard-home
spec:
  entryPoints: ["websecure"]
  routes:
  - match: Host(`adguard.homelab.emerconnelly.com`)
    kind: Rule
    services:
    - name: adguard-home
      port: 80
      passHostHeader: true
      sticky:
        cookie:
          name: traefik
          secure: true
          httpOnly: true
          sameSite: lax
  tls:
    secretName: ingress-tls
